@@ -1,0 +1,63 @@
+prefix=@prefix@
+exec_prefix=@exec_prefix@
+libdir=@libdir@
+includedir=@includedir@
+
+sscm_storage=@use_storage@
+sscm_fixnum=@use_fixnum@
+sscm_multibyte_char=@use_multibyte_char@
+sscm_default_encoding=@use_default_encoding@
+sscm_utf8=@use_utf8@
+sscm_euccn=@use_euccn@
+sscm_eucjp=@use_eucjp@
+sscm_euckr=@use_euckr@
+sscm_sjis=@use_sjis@
+sscm_strict_r5rs=@use_strict_r5rs@
+sscm_const_list_literal=@use_const_list_literal@
+sscm_const_vector_literal=@use_const_vector_literal@
+sscm_strict_null_form=@use_strict_null_form@
+sscm_strict_vector_form=@use_strict_vector_form@
+sscm_strict_argcheck=@use_strict_argcheck@
+sscm_strict_toplevel_definitions=@use_strict_toplevel_definitions@
+sscm_internal_definitions=@use_internal_definitions@
+sscm_continuation=@use_continuation@
+sscm_quasiquote=@use_quasiquote@
+sscm_hygienic_macro=@use_hygienic_macro@
+sscm_promise=@use_promise@
+sscm_int=@use_int@
+sscm_numeric_io=@use_number_io@
+sscm_char=@use_char@
+sscm_string=@use_string@
+sscm_string_procedure=@use_string_procedure@
+sscm_deep_cadrs=@use_deep_cadrs@
+sscm_vector=@use_vector@
+sscm_port=@use_port@
+sscm_reader=@use_reader@
+sscm_writer=@use_writer@
+sscm_load=@use_load@
+sscm_srfi1=@use_srfi1@
+sscm_srfi2=@use_srfi2@
+sscm_srfi6=@use_srfi6@
+sscm_srfi8=@use_srfi8@
+sscm_srfi22=@use_srfi22@
+sscm_srfi23=@use_srfi23@
+sscm_srfi28=@use_srfi28@
+sscm_srfi34=@use_srfi34@
+sscm_srfi38=@use_srfi38@
+sscm_srfi48=@use_srfi48@
+sscm_srfi60=@use_srfi60@
+sscm_srfi75=@use_srfi75@
+sscm_srfi75_named_chars=@use_srfi75_named_chars@
+sscm_extensions=@use_sscm_extensions@
+sscm_format_extensions=@use_sscm_format_extensions@
+sscm_compat_siod=@use_compat_siod@
+sscm_compat_siod_bugs=@use_compat_siod_bugs@
+sscm_eval_c_string=@use_eval_c_string@
+sscm_backtrace=@use_backtrace@
+sscm_debug=@use_debug@
+
+Name: @PACKAGE_NAME@
+Description: Scheme interpreter for embedded use
+Version: @VERSION@
+Libs: -L${libdir} -lsscm
+Cflags: -I${includedir}/sigscheme
